lienviet/deployment-esb-gateway-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esb-gateway-service
spec:
  selector:
    matchLabels:
      app: esb-gateway-service
  replicas: 1
  template:
    metadata:
      labels:
        app: esb-gateway-service
    spec:
      containers:
      - name: esb-gateway-service
        image: asia-southeast1-docker.pkg.dev/lpb-poc/lpb-registry/middleware/esb-gateway-service:dev-1.0.0
        resources:
          requests:
            memory: "150Mi"
            cpu: "100m"
        ports:
        - containerPort: 18101

---
apiVersion: v1
kind: Service
metadata:
  name: esb-gateway-service
spec:
  selector:
    app: esb-gateway-service
  ports:
  - port: 18101
    targetPort: 18101
  type: LoadBalancer
